--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,9 @@ inputs:
   base_branch:
     required: true
     description: "The base branch to check"
+  pr_number:
+    required: false
+    description: "The PR number. Can be empty"
 
 runs:
   using: node12
